sonarqube issues resolved part 5